--- a/todo.txt
+++ b/todo.txt
@@ -2,4 +2,4 @@
 - [x] Autotest: Thumbnail-Erzeugung im Must-Pass integrieren.
 - [x] Werkstatt-Check Details: Klartext-Anzeige mit einfachen Empfehlungen.
 - [x] Start-Routine: Abhängigkeiten prüfen und Nutzer-Feedback bündeln.
-- [ ] Barrierefreiheit: Kontrast-Checks für alle Themes automatisieren.
+- [x] Barrierefreiheit: Kontrast-Checks für alle Themes automatisieren.
