--- a/todo.txt
+++ b/todo.txt
@@ -7,4 +7,5 @@
 - [x] Qualitäts-Checks: eigenes Skript für Compile, Bash-Check, Marker-Scan und Must-Pass.
 - [x] Preflight: ungültigen min_free_mb-Wert melden und Standard klar anzeigen.
 - [x] Debug-Modus (erweiterte Fehlersuche) mit klaren Log-Leveln ergänzen.
+- [x] Preflight: Watchfolder-Schreibrecht prüfen und klar melden.
 - [ ] Format-Prüfung (Code-Format) als optionaler Prüfschritt dokumentieren.
