--- a/todo.txt
+++ b/todo.txt
@@ -8,4 +8,5 @@
 - [x] Preflight: ungültigen min_free_mb-Wert melden und Standard klar anzeigen.
 - [x] Debug-Modus (erweiterte Fehlersuche) mit klaren Log-Leveln ergänzen.
 - [x] Preflight: Watchfolder-Schreibrecht prüfen und klar melden.
+- [x] System- und Automations-Skripte per QProcess prüfen, ausführen und Ergebnis im UI melden.
 - [ ] Format-Prüfung (Code-Format) als optionaler Prüfschritt dokumentieren.
