Fix preflight debug log write

--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,7 @@
 - [x] Preflight: Watchfolder-Schreibrecht prüfen und klar melden.
 - [x] Maintenance: ungültige Settings-Ints sicher parsen und im Summary warnen.
 - [x] Format-Prüfung (Code-Format) als optionaler Prüfschritt dokumentieren.
+- [x] Preflight: Debug-Log stabil schreiben (Kontextmanager).
 - [ ] Release: ZIP bauen und auf frischem System testen.
 - [ ] Release: .deb bauen und Installation testen.
 - [ ] Release: Must-Pass Suite auf Zielsystem ausführen.
