docs: add debug log checklist

--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,7 @@
 - [x] Format-Prüfung (Code-Format) als optionaler Prüfschritt dokumentieren.
 - [x] Preflight: Debug-Log stabil schreiben (Kontextmanager).
 - [x] Start-Routine: Debug-Modus zeigt Pip- und Preflight-Details ohne Log-Unterdrückung.
+- [x] Dokumentation: Debug-Log speichern + Checkliste für Startprobleme auf neuen Systemen.
 - [ ] Release: ZIP bauen und auf frischem System testen.
 - [ ] Release: .deb bauen und Installation testen.
 - [ ] Release: Must-Pass Suite auf Zielsystem ausführen.
