--- a/todo.txt
+++ b/todo.txt
@@ -13,6 +13,7 @@
 - [x] Preflight: Debug-Log stabil schreiben (Kontextmanager).
 - [x] Start-Routine: Debug-Modus zeigt Pip- und Preflight-Details ohne Log-Unterdrückung.
 - [x] Dokumentation: Debug-Log speichern + Checkliste für Startprobleme auf neuen Systemen.
+- [x] Logging: Exceptions im UI/Automation konsistent ins Debug-Log schreiben.
 - [ ] Release: ZIP bauen und auf frischem System testen.
 - [ ] Release: .deb bauen und Installation testen.
 - [ ] Release: Must-Pass Suite auf Zielsystem ausführen.
