--- a/todo.txt
+++ b/todo.txt
@@ -20,9 +20,9 @@
 - [ ] Release-Pakete erstellen und testen: automatisierten Build für ZIP-Archiv und .deb-Paket einrichten; Must-Pass-Suite auf Zielsystem ausführen.
 - [ ] main.py modularisieren: UI-Logik in getrennte Klassen (Materialliste, Favoriten, Einstellungen, Quarantäne-UI) auslagern, um Wartbarkeit zu erhöhen.
 - [x] Parallele Läufe robuster sperren: zuverlässige Datei-Locks mit Zeitüberschreitung und PID-Erkennung implementieren, um gleichzeitige GUI- und CLI-Läufe zu verhindern.
-- [ ] Fehlerbehandlung verbessern: SystemExit durch Ausnahme-Handling ersetzen und Fehler im Report sowie in der GUI anzeigen. (Teilweise erledigt: Automatik/Quarantäne-Worker)
-- [ ] Sichere Subprozess-Aufrufe: Dateinamen und Pfade strikt validieren und bevorzugt FFmpeg-Bibliotheken verwenden, um Shell-Injection zu vermeiden.
-- [ ] Download-Stabilität überwachen: stable_file() durch echte Dateisystem-Watcher oder Hash-Vergleiche ersetzen, um den Abschluss von Downloads sicher zu erkennen.
+- [x] Fehlerbehandlung verbessern: SystemExit durch Ausnahme-Handling ersetzen und Fehler im Report sowie in der GUI anzeigen. (Teilweise erledigt: Automatik/Quarantäne-Worker)
+- [x] Sichere Subprozess-Aufrufe: Dateinamen und Pfade strikt validieren und bevorzugt FFmpeg-Bibliotheken verwenden, um Shell-Injection zu vermeiden.
+- [x] Download-Stabilität überwachen: stable_file() durch echte Dateisystem-Watcher oder Hash-Vergleiche ersetzen, um den Abschluss von Downloads sicher zu erkennen.
 - [ ] Zentrales Logging-Konzept einführen: alle Logs über ein einheitliches Modul mit Log-Level-Steuerung führen und Benutzer-Feedback von Entwickler-Logs trennen.
 - [ ] Konfigurationsvalidierung erweitern: Pfade auf tatsächliche Erreichbarkeit und Schreibrechte prüfen; JSON-Schema-Validierung einführen.
 - [ ] Barrierefreiheit & UI-Integration vervollständigen: Quarantäne-Tagesliste als Tabelle editierbar machen, Plugin-Schnittstelle für Presets umsetzen und Kontrast-Checks automatisieren.
