--- a/todo.txt
+++ b/todo.txt
@@ -30,8 +30,9 @@
 - [x] Konfigurationsvalidierung erweitern: Pfade auf tatsächliche Erreichbarkeit und Schreibrechte prüfen; JSON-Schema-Validierung einführen.
 - [ ] Barrierefreiheit & UI-Integration vervollständigen: Quarantäne-Tagesliste als Tabelle editierbar machen, Plugin-Schnittstelle für Presets umsetzen und Kontrast-Checks automatisieren.
 - [ ] Testabdeckung erhöhen: Selftest um Szenarien mit verschiedenen Bitraten, fehlerhaften Dateien und großen Dateien erweitern; CI-Workflow für Must-Pass-Suite einrichten.
-- [ ] Plattform-Unabhängigkeit verbessern: Skripte portabel gestalten und Installationshinweise für nicht-Linux-Plattformen ergänzen.
-- [ ] Datenstrukturen versionieren: Migrationslogik für Reports und Quarantäne-Listen entwickeln, um Schema-Änderungen zu unterstützen.
-- [ ] Performance optimieren: Thread-Anzahl dynamisch an CPU-Kerne anpassen und parallele Audio-Verarbeitung einführen.
+- [x] Plattform-Unabhängigkeit verbessern: Skripte portabel gestalten und Installationshinweise für nicht-Linux-Plattformen ergänzen.
+- [x] Datenstrukturen versionieren: Migrationslogik für Reports und Quarantäne-Listen entwickeln, um Schema-Änderungen zu unterstützen.
+- [x] Performance optimieren: Thread-Anzahl dynamisch an CPU-Kerne anpassen.
+- [ ] Performance optimieren: parallele Audio-Verarbeitung einführen.
 - [ ] Hilfe-Center integrieren: interaktive Hilfe mit Suchfunktion und Schritt-für-Schritt-Anleitungen ins Tool einbauen.
 - [ ] Internationalisierung hinzufügen: Übersetzungsdateien bereitstellen und Benutzeroberfläche für weitere Sprachen vorbereiten.
