Update release finalization guidance

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 # todo.txt
+- [x] AGENT.md: Release-Finalisierung ergänzt (Autostart, Checks, Barrierefreiheit, Struktur-Regeln).
 - [x] Preflight: Mindest-Speichergrenze robust parsen (Fallback bei ungültigen Werten).
 - [x] Autotest: Thumbnail-Erzeugung im Must-Pass integrieren.
 - [x] Werkstatt-Check Details: Klartext-Anzeige mit einfachen Empfehlungen.
