--- a/todo.txt
+++ b/todo.txt
@@ -29,6 +29,10 @@
 - [x] Fehlerberichte: base_data_dir validieren und bei Fehlern sauber im Debug-Log erfassen.
 - [x] Preflight: Settings-JSON auf gültige Struktur (Dict) prüfen und sauber fallbacken.
 - [x] Release-Pakete erstellen und testen: automatisierten Build für ZIP-Archiv und .deb-Paket einrichten; Must-Pass-Suite auf Zielsystem ausführen.
+- [x] Dokumentation: README aktualisiert (Versionierung, Checks, Projektstruktur, Barrierefreiheit).
+- [x] Entwicklerdoku: Start-Routine, Release-Checks, Validierung und Versionierung ergänzt.
+- [x] Projektstruktur: finale Ordner-/Dateiübersicht als eigene Info-Datei erstellt.
+- [x] Prüfautomatik: Vollständigen Release-Check als Skript bereitgestellt.
 - [ ] main.py modularisieren: UI-Logik in getrennte Klassen (Materialliste, Favoriten, Einstellungen, Quarantäne-UI) auslagern, um Wartbarkeit zu erhöhen.
 - [x] Parallele Läufe robuster sperren: zuverlässige Datei-Locks mit Zeitüberschreitung und PID-Erkennung implementieren, um gleichzeitige GUI- und CLI-Läufe zu verhindern.
 - [x] Fehlerbehandlung verbessern: SystemExit durch Ausnahme-Handling ersetzen und Fehler im Report sowie in der GUI anzeigen. (Teilweise erledigt: Automatik/Quarantäne-Worker)
