--- a/todo.txt
+++ b/todo.txt
@@ -28,6 +28,7 @@
 - [x] Validierung: Ausgabe-Pfade prüfen, Schreibrechte sicherstellen und Ordnerpfade abweisen.
 - [x] Fehlerberichte: base_data_dir validieren und bei Fehlern sauber im Debug-Log erfassen.
 - [x] Preflight: Settings-JSON auf gültige Struktur (Dict) prüfen und sauber fallbacken.
+- [x] Logging: activity/open_path/Report-Auswahl validiert, mit robustem Fehler-Handling und klaren Rückmeldungen.
 - [x] Release-Pakete erstellen und testen: automatisierten Build für ZIP-Archiv und .deb-Paket einrichten; Must-Pass-Suite auf Zielsystem ausführen.
 - [x] Dokumentation: README aktualisiert (Versionierung, Checks, Projektstruktur, Barrierefreiheit).
 - [x] Entwicklerdoku: Start-Routine, Release-Checks, Validierung und Versionierung ergänzt.
