--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,8 @@
 # todo.txt
 - [x] Start-Routine: FFmpeg/ffprobe konsistent prüfen und bei Fehler sauber abbrechen.
+- [x] Start-Routine: Werkstatt-Check verarbeitet Preflight-JSON robust, selbst wenn Fremdausgaben enthalten sind.
+- [x] Start-Routine: GUI-Start meldet Exit-Code und klare Optionen bei Fehlern.
+- [x] Logging: Zeitstempel mit Zeitzone erzeugen, um Warnungen zu vermeiden.
 - [x] System-Setup: mehrere Paketmanager unterstützen und klare Fehlermeldung ausgeben.
 - [x] Must-Pass Suite: fehlendes ffmpeg/ffprobe überspringen und fehlendes python3 klar melden.
 - [x] Preflight: Zeitstempel zeitzonen-sicher machen (keine Warnungen).
