--- a/todo.txt
+++ b/todo.txt
@@ -34,6 +34,7 @@
 - [x] Dokumentation: Debug-Log speichern + Checkliste für Startprobleme auf neuen Systemen.
 - [x] Logging: Exceptions im UI/Automation konsistent ins Debug-Log schreiben.
 - [x] Maintenance: Dateifehler als Warnungen sammeln und im Summary ausgeben.
+- [x] Preflight: Config-Ordner auf Schreibrechte prüfen und klar melden.
 - [x] Quarantäne-UI: Aktionen brauchen Auswahl-Check mit klarer Rückmeldung und Log.
 - [x] Quarantäne-UI: Ordner öffnen mit Validierung und Nutzer-Feedback.
 - [x] Einstellungen: Namensvorschau zeigt verständlichen Hinweis bei Vorlagen-Fehler.
@@ -78,3 +79,5 @@
 - [x] UI: Drag & Drop validiert Handler, meldet Fehler klar und protokolliert Ausnahmen.
 - [x] Barrierefreiheit: Material- und Favoriten-Suche mit barrierefreien Labels ergänzt.
 - [x] Automatik-Logging: log_line validiert Eingaben und meldet Schreibfehler robust.
+- [x] Start-Routine: Hinweis ausgeben, wenn Start-Log nicht erstellt werden kann.
+- [x] Release-Build: ZIP- und .deb-Artefakte nach Build validieren.
