Optimize release checks efficiency

--- a/todo.txt
+++ b/todo.txt
@@ -84,3 +84,4 @@
 - [x] Automatik-Logging: log_line validiert Eingaben und meldet Schreibfehler robust.
 - [x] Start-Routine: Hinweis ausgeben, wenn Start-Log nicht erstellt werden kann.
 - [x] Release-Build: ZIP- und .deb-Artefakte nach Build validieren.
+- [x] Release-Checks: Must-Pass-Läufe entdoppeln und Effizienz-Option in den Regeln dokumentieren.
