--- a/todo.txt
+++ b/todo.txt
@@ -42,6 +42,7 @@
 - [x] Logging: Exceptions im UI/Automation konsistent ins Debug-Log schreiben.
 - [x] Maintenance: Dateifehler als Warnungen sammeln und im Summary ausgeben.
 - [x] Preflight: Config-Ordner auf Schreibrechte prüfen und klar melden.
+- [x] Preflight: Basis-Ordner (base_data_dir) prüfen, Schreibrechte testen und Empfehlungen ergänzen.
 - [x] Quarantäne-UI: Aktionen brauchen Auswahl-Check mit klarer Rückmeldung und Log.
 - [x] Quarantäne-UI: Ordner öffnen mit Validierung und Nutzer-Feedback.
 - [x] Einstellungen: Namensvorschau zeigt verständlichen Hinweis bei Vorlagen-Fehler.
