--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 # todo.txt
 - [x] Klick-Start: Root-Skript hinzugefügt, das die GUI mit Fortschrittsanzeige und Autoreparatur startet.
 - [x] Start-Routine: Fortschrittsschritte ergänzt, damit Autostart klare Etappen meldet.
-- [ ] Texte weiter vereinheitlichen: Klick-Start-Meldungen in zentrale JSON-Texte auslagern.
+- [x] Texte weiter vereinheitlichen: Klick-Start-Meldungen in zentrale JSON-Texte auslagern.
 - [x] Info-Dateien: README, CHANGELOG, DEVELOPMENT_STATUS aktualisiert (Start-Routine, Prüfungen, Validierung).
 - [x] Offline-FFmpeg: portables ffmpeg/ffprobe aus portable_data/bin in Start, Self-Repair und Must-Pass nutzen.
 - [x] Start-Routine: Release-Checks brechen bei Fehlern ab und geben klare Optionen aus.
