--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 # todo.txt
+- [x] Preflight-Status nutzt Farbrollen (status_ok/status_warn) für klare visuelle Rückmeldung, Debug-Log enthält eine detaillierte Preflight-Zusammenfassung.
 - [x] Klick-Start: Root-Skript hinzugefügt, das die GUI mit Fortschrittsanzeige und Autoreparatur startet.
 - [x] Start-Routine: Fortschrittsschritte ergänzt, damit Autostart klare Etappen meldet.
 - [x] Texte weiter vereinheitlichen: Klick-Start-Meldungen in zentrale JSON-Texte auslagern.
